update notifictaion api
